# RobocupF180ControlSystem

./: CMakeLists.txt  Main.cpp  README.md
src/: GameMainWindow.cpp  GameMainWindow.h
src/fuzzy/: FIE.cc  bkp.txt  exec.sh  flie.cc  flie.h  fuzzfier.cc  fuzzy_control.cc  fuzzy_control.h  lingvar.cc  lingvar.h  makefile  motor.cc  motor.h  referee.sav  regras.txt  regras_alteradas.txt  rule.cc  rule.h
src/old/: Ball.cpp  Ball.h  ComSysSimulator.cpp  ComSysSimulator.h  CommunicationSystem.cpp  CommunicationSystem.h  Element.cpp  Element.h  Game.cpp  Game.h  GameFunctions.cpp  MVector.cpp  MVector.h  Point.cpp  Point.h  Robot.cpp  Robot.h  RobotBehavior.cpp  RobotBehavior.h  RobotBehaviorGoalkeaper.cpp  RobotBehaviorGoalkeaper.h  Strategy.cpp  Strategy.h  UtilGame.cpp  UtilGame.h
